# ml_glass

./: .gitignore  README.md  pyproject.toml
csv/breiman/: vidro_115_top3_similares.csv  vidro_1196_top3_similares.csv  vidro_1512_top3_similares.csv  vidro_1618_top3_similares.csv  vidro_2552_top3_similares.csv  vidro_2988_top3_similares.csv  vidro_3652_top3_similares.csv  vidro_4330_top3_similares.csv  vidro_465_top3_similares.csv  vidro_819_top3_similares.csv
json/: compounds.json
src/data/: process_data.py
src/llm/: run_cppllama.py  run_llama.py
src/models/: cp.py  iforest.py  locart.py  qrf.py  rf_breiman.py  tsne.py
src/viz/: pca.py
